# xyz-autodiff-cuda

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Taskfile.yaml  log.txt  operations_gradient_test_analysis.md  performance.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: xyz_autodiffConfig.cmake.in
docs/: design.md
docs/report/: OPTIMIZATION_REPORT.md  README.md  analyze_specific_kernels.sh  generate_ptx.sh  kernel_optimization_test.cu  ptx_analysis.md
docs/report/ptx_output/: kernel_O0.ptx  kernel_O3_fast.ptx
examples/: CMakeLists.txt  basic_example.cu  neural_network.cu
examples/mini-gaussian-splatting/: CMakeLists.txt  README.md  covariance_generation.cuh  element_wise_exp.cuh  element_wise_multiply.cuh  gaussian_parameters.cpp  gaussian_parameters.cu  gaussian_parameters.h  gaussian_splatting_kernel.cu  gaussian_splatting_kernel.cuh  gaussian_splatting_training.cu  image_utils.cpp  image_utils.h  mahalanobis_distance.cuh  matrix_multiplication.cuh  mini_gaussian_splatting_example.cu  norm_addition.cuh  simple_gaussian_kernel.cu  symmetric_matrix.cuh  test_simple_gaussian.cu  test_single_pixel.cu  training_config.cpp  training_config.h
examples/mini-gaussian-splatting/operations/: covariance_generation.cuh  element_wise_exp.cuh  element_wise_multiply.cuh  mahalanobis_distance.cuh  matrix_multiplication.cuh  norm_operations.cuh  symmetric_matrix.cuh
examples/mini-gaussian-splatting/tests/: test_covariance_generation.cu  test_element_wise_exp.cu  test_element_wise_multiply.cu  test_gaussian_splatting.cu  test_mahalanobis_distance.cu  test_matrix_multiplication.cu  test_matrix_operations.cu  test_mini_gaussian_splatting_gradient.cu  test_norm_addition.cu  test_norm_operations.cu  test_symmetric_matrix.cu
examples/optimization/: CMakeLists.txt  linear_regression_sgd.cu  subtract_squared.cuh
examples/optimization/tests/: optimization_network_gradient_tester.cuh  test_linear_regression_gradient.cu  test_linear_regression_network_gradient.cu
include/: const_array.cuh  dense_matrix.cuh  diagonal_matrix_view.cuh  graph.cuh  matrix_ops.cuh  node.cuh  operation.cuh  symmetric_matrix_view.cuh  variable.cuh
include/concept/: const_array.cuh  core_logic.cuh  matrix.cuh  node.cuh  operation.cuh  operation_node.cuh  variable.cuh
include/operations/: add.cuh  add_logic.cuh  exp_logic.cuh  mul_logic.cuh  numerical_verification.cuh  operation.cuh  operation_old.cuh  quaternion_to_rotation_matrix_logic.cuh  sigmoid_logic.cuh  unary_functions.cuh
include/operations/binary/: add_logic.cuh  div_logic.cuh  matmul_logic.cuh  mul_logic.cuh  sub_logic.cuh
include/operations/unary/: add_constant_logic.cuh  broadcast.cuh  broadcast_logic.cuh  const_array_add_logic.cuh  const_array_sub_logic.cuh  cos_logic.cuh  div_constant_logic.cuh  exp_logic.cuh  l1_norm_logic.cuh  l2_norm_logic.cuh  mul_constant_logic.cuh  neg_logic.cuh  sigmoid_logic.cuh  sin_logic.cuh  squared_logic.cuh  sub_constant_logic.cuh  sum_logic.cuh  sym_matrix2_inv_logic.cuh  sym_matrix3_inv_logic.cuh  to_rotation_matrix_logic.cuh
include/util/: cuda_managed_ptr.cuh  cuda_unique_ptr.cuh  error_checker.cuh
include/xyz_autodiff/: backward.h  const_array.cuh  dense_matrix.cuh  operations.h  symmetric_matrix_view.cuh  tensor.h  testing.cuh  variable.cuh  variable_operators.cuh  xyz_autodiff.cuh  xyz_autodiff.h
include/xyz_autodiff/concept/: core_logic.cuh  matrix.cuh  variable.cuh
include/xyz_autodiff/operations/: math.cuh  operation.cuh
include/xyz_autodiff/operations/binary/: add_logic.cuh  div_logic.cuh  matmul_logic.cuh  mul_logic.cuh  sub_logic.cuh
include/xyz_autodiff/operations/unary/: add_constant_logic.cuh  broadcast.cuh  broadcast_logic.cuh  const_array_add_logic.cuh  const_array_concepts.cuh  const_array_sub_logic.cuh  cos_logic.cuh  div_constant_logic.cuh  exp_logic.cuh  l1_norm_logic.cuh  l2_norm_logic.cuh  mul_constant_logic.cuh  neg_logic.cuh  sigmoid_logic.cuh  sin_logic.cuh  squared_logic.cuh  sub_constant_logic.cuh  sum_logic.cuh  sym_matrix2_inv_logic.cuh  (+1 more)
include/xyz_autodiff/testing/: binary_gradient_tester.cuh  network_gradient_tester.cuh  unary_gradient_tester.cuh
include/xyz_autodiff/util/: error_checker.cuh
src/: backward.cu  operations.cu  tensor.cu
tests/: CMakeLists.txt  gradient_test_utility.cuh  test_backward.cu  test_complex_operations.cu  test_const_array.cu  test_dag_backward.cu  test_dense_matrix.cu  test_diagonal_matrix.cu  test_gradient_verification.cu  test_math_dispatcher.cu  test_matrix_transpose.cu  test_norm_operations.cu  test_numerical_verification.cu  test_operation.cu  test_operation_chaining.cu  test_operation_chaining_simple.cu  test_operation_concepts.cu  test_operations.cu  test_parallel_gradient_accumulation.cu  test_quaternion_to_rotation_matrix.cu  test_shared_memory_atomic.cu  test_sym_matrix2_inv.cu  test_symmetric_matrix.cu  test_tensor.cu  test_unary_functions.cu  test_unary_operations.cu  test_variable.cu  test_variable_operators.cu
tests/operation/base/: test_gradient_verification.cu  test_linear_regression_network.cu  test_operation_chaining.cu  test_operation_concepts.cu
tests/operation/binary/: test_binary_operations_gradient.cu  test_matmul_operations_gradient.cu  test_variable_operators.cu
tests/operation/unary/: test_add_constant_operations_gradient.cu  test_basic_unary_operations_gradient.cu  test_broadcast.cu  test_const_array_concepts.cu  test_const_array_operations.cu  test_const_array_operations_simple.cu  test_constant_operations_gradient.cu  test_exponential_operations_gradient.cu  test_matrix_operations_gradient.cu  test_norm_operations.cu  test_norm_operations_gradient.cu  test_quaternion_to_rotation_matrix.cu  test_specialized_operations_gradient.cu  test_sub_constant_operations_gradient.cu  test_sum_operations_gradient.cu  test_sym_matrix2_inv.cu  test_trigonometric_operations_gradient.cu  test_unary_operations.cu
tests/utility/: binary_gradient_tester.cuh  gradient_test_utility.cuh  network_gradient_tester.cuh  unary_gradient_tester.cuh
